fixed overlapping image in some RSes by moving from CSS into content

--- a/trunk/30/epub30-spec/EPUB/css/epub-spec.css
+++ b/trunk/30/epub30-spec/EPUB/css/epub-spec.css
@@ -8,11 +8,6 @@ body {
     font-family: arial, helvetica, sans-serif;
     color: black;
     background: white;
-    background-position: 97% 20px;
-    background-attachment: scroll;
-    background-repeat: no-repeat;
-    background-image: url(../img/idpflogo_web_125.jpg);
-    
 }
 
 /***************************************************************************/
